--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* Global Colors */
+$primaryColor: #1fbfb8
+$borderColor: #343434
+$tableColor: #e8e8e8
+$backgroundColor: #F5F5F5
+
+*
+    padding: 0
+    margin: 0
+    background-color: $backgroundColor
