--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,12 +1,39 @@
-/* You can add global styles to this file, and also import other style files */
+@font-face 
+    font-family: "Roboto"
+    src: url('./assets/font/Roboto-Regular.ttf')
+    font-weight: regular
 
-/* Global Colors */
-$primaryColor: #1fbfb8
-$borderColor: #343434
-$tableColor: #e8e8e8
-$backgroundColor: #F5F5F5
 
+@font-face 
+    font-family: "Roboto"
+    src: url('./assets/font/Roboto-Italic.ttf')
+    font-weight: regular
+
+
+@font-face 
+    font-family: "Roboto"
+    src: url('./assets/font/Roboto-Light.ttf')
+    font-weight: regular
+
+
+@font-face 
+    font-family: "Roboto"
+    src: url('./assets/font/Roboto-Bold.ttf')
+    font-weight: bold
+
+
+@font-face 
+    font-family: "Segoe-Print"
+    src: url('./assets/font/segoepr.ttf')
+    font-weight: regular
+
+
+
+@import './sass/var'
+   
 *
     padding: 0
     margin: 0
+    border: 0
     background-color: $backgroundColor
+
