--- a/src/sass/_var.sass
+++ b/src/sass/_var.sass
@@ -1,5 +1,10 @@
-/* Global Colors */
+/* Global Colors */   
 $primaryColor: #1fbfb8
 $borderColor: #343434
 $tableColor: #e8e8e8
 $backgroundColor: #F5F5F5
+$formFontColor: #707070
+
+/* Global Fonts */
+$fontRoboto: "Roboto", sans-serif
+$fontSegoe: "Segoe-Print", sans-serif
