--- a/src/styles.sass
+++ b/src/styles.sass
@@ -3,31 +3,25 @@
     src: url('./assets/font/Roboto-Regular.ttf')
     font-weight: regular
 
-
 @font-face 
     font-family: "Roboto"
     src: url('./assets/font/Roboto-Italic.ttf')
     font-weight: regular
-
 
 @font-face 
     font-family: "Roboto"
     src: url('./assets/font/Roboto-Light.ttf')
     font-weight: regular
 
-
 @font-face 
     font-family: "Roboto"
     src: url('./assets/font/Roboto-Bold.ttf')
     font-weight: bold
 
-
 @font-face 
     font-family: "Segoe-Print"
     src: url('./assets/font/segoepr.ttf')
     font-weight: regular
-
-
 
 @import './sass/var'
    
@@ -37,3 +31,15 @@
     border: 0
     background-color: $backgroundColor
 
+h1
+    font-family: $fontSegoe
+    font-weight: bold
+    font-size: 35px
+    color: black
+
+h2, h3, h4, h5, p, a, label
+    font-family: $fontRoboto
+    font-weight: regular
+    font-size: 15px
+    color: black
+    text-decoration: none
