--- a/src/app/_hauptKomponente/b-passwort/b-passwort.component.html
+++ b/src/app/_hauptKomponente/b-passwort/b-passwort.component.html
@@ -1,1 +1,18 @@
-<p>b-passwort works!</p>
+<div class="passwort">
+    <div class="loginContent">
+        <div class="loginLogo">
+            <img [src]="logo" alt="Goffini Logo mit Schriftzug 'Goffini, Ordnung|Form|Funktion'.">
+        </div>
+        <div class="loginForm">
+            <form action="">
+                <div class="loginUserName">
+                    <img [src]="username" alt="" class="trennLinie">
+                    <input type="text" id="userName" placeholder="BENUTZERNAME">
+                </div>
+                <div class="submitLogin">
+                    <input type="submit" value="Passwort zurücksetzen">
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
