--- a/src/app/_subKomponente/a-header/a-header.component.html
+++ b/src/app/_subKomponente/a-header/a-header.component.html
@@ -1,1 +1,22 @@
-<p>a-header works!</p>
+<div class="skHeader">
+    <div class="header">
+        <div class="logo">
+            <img [src]="logoKlein" alt="Goffini Logo mit Schriftzug 'Goffini, Ordnung|Form|Funktion'.">
+        </div>
+        <div class="searchBar">
+            <input type="text" id="searchBar" placeholder="SEARCH">
+            <img [src]="search" alt="">
+        </div>
+        <div class="profil">
+            <p class="profilGruss">Hi Thomas Brändle</p>
+            <div class="menuPunkt">
+                <img [src]="profil" alt="">
+            </div>
+        </div>
+    </div>
+    <div class="headerText">
+        <div class="text">
+            <h1>Willkommen Thomas Brändle</h1>
+        </div>
+    </div>
+</div>
