--- a/src/app/_subKomponente/a-header/a-header.component.html
+++ b/src/app/_subKomponente/a-header/a-header.component.html
@@ -1,11 +1,11 @@
 <div class="skHeader">
     <div class="header">
         <div class="logo">
-            <img [src]="logoKlein" alt="Goffini Logo mit Schriftzug 'Goffini, Ordnung|Form|Funktion'.">
+            <a href="https://goffini.ch" target="_blank"><img [src]="logoKlein" alt="Goffini Logo mit Schriftzug 'Goffini, Ordnung|Form|Funktion'."></a>
         </div>
         <div class="searchBar">
             <input type="text" id="searchBar" placeholder="SEARCH">
-            <img [src]="search" alt="">
+            <a href="#"><img [src]="search" alt=""></a>
         </div>
         <div class="profil">
             <p class="profilGruss">Hi Thomas Brändle</p>
