--- a/src/styles.sass
+++ b/src/styles.sass
@@ -29,7 +29,10 @@
     padding: 0
     margin: 0
     border: 0
+
+body
     background-color: $backgroundColor
+
 
 h1
     font-family: $fontSegoe
