--- a/src/app/_hauptKomponente/c-dashboard/c-dashboard.component.html
+++ b/src/app/_hauptKomponente/c-dashboard/c-dashboard.component.html
@@ -1,3 +1,17 @@
 <app-a-header></app-a-header>
 <app-b-sidebar></app-b-sidebar>
+<div class="forWindow">
+    <div class="forOL window">
+    </div>
+
+    <div class="forOR window">
+    </div>
+
+    <div class="forUL window">
+    </div>
+
+    <div class="forUR window">
+    </div>
+</div>
+
 <app-c-footer></app-c-footer>
