--- a/src/app/_subKomponente/a-header/a-header.component.sass
+++ b/src/app/_subKomponente/a-header/a-header.component.sass
@@ -78,6 +78,7 @@
     font-family: $fontSegoe
     font-size: 15px
     margin-right: 10px
+    margin-top: 20px
 
 /* ### Unterer Teil Header Text ### */
 .headerText
