--- a/src/app/_hauptKomponente/e-auftrag/e-auftrag.component.html
+++ b/src/app/_hauptKomponente/e-auftrag/e-auftrag.component.html
@@ -1,1 +1,21 @@
-<p>e-auftrag works!</p>
+<app-a-header></app-a-header>
+<app-b-sidebar></app-b-sidebar>
+<div class="fiveWindow">
+    <div class="fiveOL window">
+
+    </div>
+    <div class="fiveOR window">
+
+    </div>
+    <div class="fiveML window">
+
+    </div>
+    <div class="fiveMR window">
+
+    </div>
+    <div class="fiveUnten window">
+
+    </div>
+</div>
+
+<app-c-footer></app-c-footer>
