--- a/src/app/_hauptKomponente/h-kunde/h-kunde.component.html
+++ b/src/app/_hauptKomponente/h-kunde/h-kunde.component.html
@@ -1,1 +1,11 @@
-<p>h-kunde works!</p>
+<app-a-header></app-a-header>
+<app-b-sidebar></app-b-sidebar>
+<div class="twoWindow">
+    <div class="oben window">
+    </div>
+
+    <div class="unten window">
+    </div>
+</div>
+
+<app-c-footer></app-c-footer>
