--- a/src/app/_hauptKomponente/l-einstellungen/l-einstellungen.component.html
+++ b/src/app/_hauptKomponente/l-einstellungen/l-einstellungen.component.html
@@ -1,1 +1,6 @@
-<p>l-einstellungen works!</p>
+<app-a-header></app-a-header>
+<app-b-sidebar></app-b-sidebar>
+<div class="oneWindow">
+    <div class="one window">
+    </div>
+</div>
