--- a/src/app/_subKomponente/a-header/a-header.component.html
+++ b/src/app/_subKomponente/a-header/a-header.component.html
@@ -9,9 +9,11 @@
         </div>
         <div class="profil">
             <p class="profilGruss">Hi Thomas Brändle</p>
-            <div class="menuPunkt">
-                <img [src]="profil" alt="">
-            </div>
+            <a href="profil" class="menuPunkt">
+                <div class="menuPunkt">
+                    <img [src]="profil" alt="">
+                </div>
+            </a>
         </div>
     </div>
     <div class="headerText">
