--- a/src/app/_subKomponente/a-header/a-header.component.sass
+++ b/src/app/_subKomponente/a-header/a-header.component.sass
@@ -3,6 +3,9 @@
 /* ### Gesamte Sub Komponente ### */
 .skHeader
     margin: 0 auto
+    position: fixed
+    top: 0
+    left: 0
 
 /* ### Oberer Teil Header ### */
 .header
