--- a/src/app/_subKomponente/b-sidebar/b-sidebar.component.html
+++ b/src/app/_subKomponente/b-sidebar/b-sidebar.component.html
@@ -7,25 +7,25 @@
             </a>
         </div>
         <div class="projektNav menuPunkt">
-            <a href="">
+            <a href="projekte">
                 <img [src]="projekt" alt="">
                 <p>Projekte</p>
             </a>
         </div>
         <div class="kundenNav menuPunkt">
-            <a href="">
+            <a href="kunden">
                 <img [src]="kunde" alt="">
                 <p>Kunden</p>
             </a>
         </div>
         <div class="artikelNav menuPunkt">
-            <a href="">
+            <a href="artikel">
                 <img [src]="artikel" alt="">
                 <p>Artikel</p>
             </a>
         </div>
         <div class="unternehmenNav menuPunkt">
-            <a href="">
+            <a href="unternehmen">
                 <img [src]="unternehmen" alt="">
                 <p>Unternehmen</p>
             </a>
@@ -33,13 +33,13 @@
         <div class="abstand menuPunkt">
         </div>
         <div class="einstellungenNav menuPunkt">
-            <a href="">
+            <a href="einstellungen">
                 <img [src]="einstellungen" alt="">
                 <p>Einstellungen</p>
             </a>
         </div>
         <div class="logoutNav menuPunkt">
-            <a href="">
+            <a href="login">
                 <img [src]="logout" alt="">
                 <p>Logout</p>
             </a>
