--- a/src/app/_hauptKomponente/j-der-artikel/j-der-artikel.component.html
+++ b/src/app/_hauptKomponente/j-der-artikel/j-der-artikel.component.html
@@ -1,1 +1,6 @@
-<p>j-der-artikel works!</p>
+<app-a-header></app-a-header>
+<app-b-sidebar></app-b-sidebar>
+<div class="oneWindow">
+    <div class="one window">
+    </div>
+</div>
