--- a/src/app/_hauptKomponente/m-profil/m-profil.component.html
+++ b/src/app/_hauptKomponente/m-profil/m-profil.component.html
@@ -1,1 +1,6 @@
-<p>m-profil works!</p>
+<app-a-header></app-a-header>
+<app-b-sidebar></app-b-sidebar>
+<div class="oneWindow">
+    <div class="one window">
+    </div>
+</div>
